--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <h5 class="operations__header">
             Design
           </h5>
-          <p>A lot of time was put into the design stage of our app. Color schemes, layouts, logos, and even how we wanted to present our project were discussed as a group.</p>
+          <p>A lot of time was put into the design stage of our app. Color schemes, layouts, logos, and even how we wanted to present our project were discussed as a group. We were inspired by the IOS operating system and iMessages design. We wanted our interface to resemble text messaging, something that is familiar and intuitive to most people.</p>
         </div>
 
         <div class="operations__content operations__content--3">
